<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textCapWords|textMultiLine"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco"
                android:inputType="textCapWords|textMultiLine"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_tels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tels"
                android:inputType="phone"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:paddingBottom="8dp"
                android:textSize="12sp"
                android:text="@string/aparelho"/>

            <RadioButton
                android:id="@+id/rb_instrumento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/instrumento"/>

            <RadioButton
                android:id="@+id/rb_teclado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/teclado"/>

            <RadioButton
                android:id="@+id/rb_microfone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/microfone"/>

            <RadioButton
                android:id="@+id/rb_pedal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/pedal"/>

            <RadioButton
                android:id="@+id/rb_pedaleira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/pedaleira"/>

            <RadioButton
                android:id="@+id/rb_mesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/mesa"/>

            <RadioButton
                android:id="@+id/rb_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/power"/>

            <RadioButton
                android:id="@+id/rb_caixa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/caixa"/>

            <RadioButton
                android:id="@+id/rb_outros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/outros"/>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao"
                android:inputType="textCapWords|textMultiLine"
                android:textSize="20sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_defeito_reclamado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/defeito_reclamado"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_salvar_os"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/botao_customizado"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/criar_os"/>
    </LinearLayout>
</ScrollView>