<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/data_entrada"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_data_entrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="13dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:text="@string/data_orcamento_pronto"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/et_data_orcamento_pronto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp"
                mask:mask="##/##/##" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:text="@string/data_orcamento_aprovado"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/et_data_orcamento_aprovado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp"
                mask:mask="##/##/##" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:text="@string/data_servico_pronto"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/et_data_servico_pronto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp"
                mask:mask="##/##/##" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textCapWords|textMultiLine"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco"
                android:inputType="textCapWords|textMultiLine"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_tels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tels"
                android:inputType="phone"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_aparelho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao"
                android:inputType="textCapWords|textMultiLine"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_defeito_reclamado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/defeito_reclamado"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_defeito_constatado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/defeito_constatado"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/et_obs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/obs"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:text="@string/preco"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/et_preco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp"
                mask:mask="R$ #####" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:text="@string/sinal"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/et_sinal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp"
                mask:mask="R$ #####" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/a_pagar"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_a_pagar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cb_pago"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pago"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_salvar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/botao_customizado"
                android:padding="12dp"
                android:text="@string/salvar"
                android:textSize="20sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_gerar_pdf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:background="@drawable/botao_customizado"
                android:padding="12dp"
                android:text="@string/gerar_pdf"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>